--- a/MU/BoardModule/Resources/views/Posting/Admin/display.html.twig
+++ b/MU/BoardModule/Resources/views/Posting/Admin/display.html.twig
@@ -39,15 +39,20 @@
             <dt>{{ __('Invocations') }}</dt>
             <dd>{{ posting.invocations }}</dd>
         {% endif %}
-        {% if posting.solved is not empty %}
-            <dt>{{ __('Solved') }}</dt>
-            <dd>{% if posting.solved %}
-                <i class="fa fa-check" title="{{ __('Yes') }}"></i>
+        <dt>{{ __('Solved') }}</dt>
+        <dd>{% set itemId = posting.getKey() %}
+        <a id="toggleSolved{{ itemId }}" href="javascript:void(0);" class="muboard-ajax-toggle hidden" data-object-type="posting" data-field-name="solved" data-item-id="{{ itemId }}">
+            <i class="fa fa-check text-success{% if not posting.solved %} hidden{% endif %}" id="yesSolved{{ itemId }}" title="{{ __('This setting is enabled. Click here to disable it.') }}"></i>
+            <i class="fa fa-times text-danger{% if posting.solved %} hidden{% endif %}" id="noSolved{{ itemId }}" title="{{ __('This setting is disabled. Click here to enable it.') }}"></i>
+        </a>
+        <noscript><div id="noscriptSolved{{ itemId }}">
+            {% if posting.solved %}
+                <i class="fa fa-check text-success" title="{{ __('Yes') }}"></i>
             {% else %}
-                <i class="fa fa-times" title="{{ __('No') }}"></i>
+                <i class="fa fa-times text-danger" title="{{ __('No') }}"></i>
             {% endif %}
-            </dd>
-        {% endif %}
+        </div></noscript>
+        </dd>
         {% if posting.firstImage is not empty %}
             <dt>{{ __('First image') }}</dt>
             <dd>{% if posting.firstImage is not empty and posting.firstImageMeta|default %}
