--- a/MU/BoardModule/Resources/views/Posting/display.html.twig
+++ b/MU/BoardModule/Resources/views/Posting/display.html.twig
@@ -15,6 +15,7 @@
     {% set isQuickView = app.request.query.getBoolean('raw', false) %}
     <div class="muboardmodule-posting muboardmodule-display">
     
+        {#<div class="row">#}
         <div class="row">
             <div class="col-sm-12">
             <div class="posting-display-header">
@@ -46,6 +47,8 @@
                 </div>
             </div>
             </div>
+            </div>
+            <div class="row">
             <div class="col-sm-12">
                 <div class="posting-display-content">
                 <div class="muboard-user-posting-content-text">
@@ -59,9 +62,13 @@
                 {% endif %}
                 </div>
             </div>
-        <div>
-        
-        <div class="col-md-12">{{ muboardmodule_showEditForm() }}</div>
+            </div>
+        {#<div>#}
+        <div class="row">
+            <div class="col-md-12">
+                {{ muboardmodule_showEditForm() }}
+            </div>
+        </div>
 
     {#<div class="row">
         <div class="col-sm-9">
