--- a/MU/BoardModule/Resources/views/Posting/includeDisplayItemListManyOwnChildren.html.twig
+++ b/MU/BoardModule/Resources/views/Posting/includeDisplayItemListManyOwnChildren.html.twig
@@ -8,15 +8,19 @@
     {% set noLink = false %}
 {% endif %}
 {% if items|default and items|length > 0 %}
-<div class="list-group muboardmodule-related-item-list forum">
+{#<div class="list-group muboardmodule-related-item-list posting">#}
+<ul class="list-group">
 {% for item in items %}
-    <div class="col-md-12 children">
-    <div class="col-md-4">
+    <li class="list-group-item">
+    <div class="row">
+    <div class="col-sm-12 children">
+    <div class="row">
+    <div class="col-sm-4">
         <div class="children-include-user">
             {{ include('@MUBoardModule/Helper/includeStandardFieldsDisplay2.html.twig', {obj: item}) }}
         </div>
     </div>
-    <div class="col-md-8">
+    <div class="col-sm-8">
         <div class="children-include-header">
             {{ include('@MUBoardModule/Helper/includeStandardFieldsDisplay3.html.twig', {obj: item}) }}
         </div>
@@ -35,6 +39,10 @@
         </div>
     </div>
     </div>
+    </div>
+    </div>
+    </li>
 {% endfor %}
-</div>
+</ul>
+{#</div>#}
 {% endif %}
