--- a/MU/BoardModule/Resources/views/Posting/includeDisplayItemListManyOwnChildren.html.twig
+++ b/MU/BoardModule/Resources/views/Posting/includeDisplayItemListManyOwnChildren.html.twig
@@ -11,7 +11,7 @@
 {#<div class="list-group muboardmodule-related-item-list posting">#}
 <ul class="list-group">
 {% for item in items %}
-    <li class="list-group-item">
+    <li id="group-item-{{ item.id }}" class="list-group-item">
     <div class="row">
     <div class="col-sm-12 children">
     <div class="row">
