--- a/MU/BoardModule/Resources/public/css/custom.css
+++ b/MU/BoardModule/Resources/public/css/custom.css
@@ -75,6 +75,12 @@
 	font-size: 0.8em;
 }
 
+/*************FORUM****************/
+
+.move-forum {
+	float: left;
+}
+
 /***********POSTING****************/
 
 .list-group .active {
