--- a/MU/BoardModule/Resources/views/Posting/includeDisplayItemListManyOwnChildren.html.twig
+++ b/MU/BoardModule/Resources/views/Posting/includeDisplayItemListManyOwnChildren.html.twig
@@ -13,14 +13,14 @@
 {% for item in items %}
     <li id="group-item-{{ item.id }}" class="list-group-item">
     <div class="row">
-    <div class="col-sm-12 children">
+    <div class="col-xs-12 children">
     <div class="row">
-    <div class="col-sm-4">
+    <div class="col-xs-6 col-sm-4">
         <div class="children-include-user">
             {{ include('@MUBoardModule/Helper/includeStandardFieldsDisplay2.html.twig', {obj: item}) }}
         </div>
     </div>
-    <div class="col-sm-8">
+    <div class="col-xs-6 col-sm-8">
         <div class="children-include-header">
             {{ include('@MUBoardModule/Helper/includeStandardFieldsDisplay3.html.twig', {obj: item}) }}
         </div>
